Fix high res videos taking too much space

--- a/default.css
+++ b/default.css
@@ -27,11 +27,18 @@ ul {
   }
 
 .videobox {
-	margin: 40px;
+	margin-top: 40px;
 	max-width: 100%;
 	max-height: 100%;
 	text-align: center;
 }
+
+@media only screen and (min-aspect-ratio: 3/2) {
+	.videobox {
+		max-width: 70%;
+		margin: 40px;
+	}
+  }
 
 .logbox {
 	position: absolute;
